--- a/About.html
+++ b/About.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="navbar.css"> 
+    <link rel="stylesheet" href="style.css"> 
     <link rel="shortcut icon" type="x-icon" href=EcoTechSphere.png>
     <title>EcoTechSphere</title>
 </head>
@@ -12,7 +12,7 @@
     <header>
         <h2 class="logo">EcoTechSphere</h2>
         <nav class="navigation">
-            <a href="practice website.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="About.html" class="active">About</a>
             <a href="Service.html">Service</a>
             <a href="Contact.html">Contact</a>
@@ -44,6 +44,6 @@
         </section>
         
     </section>
-    <script src="EcoTechSphere.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
